--- a/ImGate/PC_APP/Scenario2_Connect.xaml
+++ b/ImGate/PC_APP/Scenario2_Connect.xaml
@@ -8,13 +8,6 @@
     mc:Ignorable="d">
     <ScrollViewer Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="12,10,12,12">
         <StackPanel>
-            <TextBlock Text="Description:" Style="{StaticResource SampleHeaderTextStyle}"/>
-            <TextBlock Style="{StaticResource ScenarioDescriptionTextStyle}" Text="Query services from GATT server"/>
-            <TextBlock TextWrapping="Wrap" Margin="0,10,0,0">
-                This scenario connects to the Bluetooth Low Energy device
-                selected in the "Discover GATT Servers" scenario
-                and communicates with the device.
-            </TextBlock>
             <TextBlock Style="{StaticResource ListItemTextStyle}" TextWrapping="Wrap" Margin="0,10,0,0">
                 Selected device: <Run x:Name="SelectedDeviceRun" FontWeight="Bold"/>
             </TextBlock>
@@ -33,6 +26,10 @@
                 <TextBox x:Name="CharacteristicWriteValue" PlaceholderText="Enter text/number to send"/>
                 <Button Content="Write Value as Number" Click="{x:Bind CharacteristicWriteButtonInt_Click}" Margin="0,10,0,0"/>
                 <Button Content="Write Value as UTF-8" Click="{x:Bind CharacteristicWriteButton_Click}" Margin="0,10,0,0"/>
+            </StackPanel>
+            <StackPanel x:Name="DoorlockTestPanel" Margin="0, 10, 0, 0" Visibility="Collapsed">
+                <Button Content="Doorlock Test" Click="{x:Bind TestButton_Click}" Margin="0, 10, 0, 0"/>
+                <TextBlock x:Name="Log" Margin="0,10,0,0"/>
             </StackPanel>
             <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
         </StackPanel>
