--- a/ImGate/PC_APP/Scenario2_Connect.xaml
+++ b/ImGate/PC_APP/Scenario2_Connect.xaml
@@ -14,22 +14,28 @@
             <Button x:Name="ConnectButton" Content="Connect" Click="{x:Bind ConnectButton_Click}" Margin="0,10,0,0"/>
             <ComboBox x:Name="ServiceList" Margin="0,10,0,0" PlaceholderText="Choose a service" Visibility="Collapsed"
                       SelectionChanged="{x:Bind ServiceList_SelectionChanged}"/>
-            <ComboBox x:Name="CharacteristicList" Margin="0,10,0,0" PlaceholderText="Choose a characteristic" Visibility="Collapsed"
+            <StackPanel x:Name="CharacteristicPanel">
+                <ComboBox x:Name="CharacteristicList" Margin="0,10,0,0" PlaceholderText="Choose a characteristic" Visibility="Collapsed"
                       SelectionChanged="{x:Bind CharacteristicList_SelectionChanged}" />
-            <StackPanel Orientation="Horizontal">
-                <Button x:Name="CharacteristicReadButton" Content="Read Value" Click="{x:Bind CharacteristicReadButton_Click}"
+                <StackPanel Orientation="Horizontal">
+                    <Button x:Name="CharacteristicReadButton" Content="Read Value" Click="{x:Bind CharacteristicReadButton_Click}"
                         Visibility="Collapsed" Margin="0,10,10,0"/>
-                <Button x:Name="ValueChangedSubscribeToggle" Content="Subscribe to value changes" Click="{x:Bind ValueChangedSubscribeToggle_Click}"
+                    <Button x:Name="ValueChangedSubscribeToggle" Content="Subscribe to value changes" Click="{x:Bind ValueChangedSubscribeToggle_Click}"
                         Visibility="Collapsed" Margin="0,10,10,0"/>
-            </StackPanel>
-            <StackPanel x:Name="CharacteristicWritePanel" Margin="0,10,0,0" Visibility="Collapsed">
-                <TextBox x:Name="CharacteristicWriteValue" PlaceholderText="Enter text/number to send"/>
-                <Button Content="Write Value as Number" Click="{x:Bind CharacteristicWriteButtonInt_Click}" Margin="0,10,0,0"/>
-                <Button Content="Write Value as UTF-8" Click="{x:Bind CharacteristicWriteButton_Click}" Margin="0,10,0,0"/>
-            </StackPanel>
-            <StackPanel x:Name="DoorlockTestPanel" Margin="0, 10, 0, 0" Visibility="Collapsed">
-                <Button Content="Doorlock Test" Click="{x:Bind TestButton_Click}" Margin="0, 10, 0, 0"/>
-                <TextBlock x:Name="Log" Margin="0,10,0,0"/>
+                </StackPanel>
+                <StackPanel x:Name="CharacteristicWritePanel" Margin="0,10,0,0" Visibility="Collapsed">
+                    <TextBox x:Name="CharacteristicWriteValue" PlaceholderText="Enter text/number to send"/>
+                    <Button Content="Write Value as Number" Click="{x:Bind CharacteristicWriteButtonInt_Click}" Margin="0,10,0,0"/>
+                    <Button Content="Write Value as UTF-8" Click="{x:Bind CharacteristicWriteButton_Click}" Margin="0,10,0,0"/>
+                </StackPanel>
+                <StackPanel x:Name="NUSControlPanel" Visibility="Collapsed">
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="Lock" Click="{x:Bind LockButton_Click}" Margin="0, 10, 10, 0"/>
+                        <Button Content="Unlock" Click="{x:Bind UnlockButton_Click}" Margin="0, 10, 10, 0"/>
+                        <Button Content="Doorlock Test" Click="{x:Bind TestButton_Click}" Margin="0, 10, 10, 0"/>
+                    </StackPanel>
+                    <TextBlock x:Name="Log" Margin="0,10,0,0"/>
+                </StackPanel>
             </StackPanel>
             <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
         </StackPanel>
