--- a/ImGate/PC_APP/Scenario1_Discovery.xaml
+++ b/ImGate/PC_APP/Scenario1_Discovery.xaml
@@ -25,23 +25,23 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    <Grid Padding="12">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <StackPanel>
-            <Button x:Name="Action" Content="start"/>
-            <TextBlock Text="hello test world!!" x:Name="logtext" Margin="0,10,0,0"/>
-        </StackPanel>
+    <StackPanel>
         <StackPanel x:Name="header" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Button x:Name="EnumerateButton" Content="Start enumerating" Click="{x:Bind EnumerateButton_Click}"/>
+            <Button x:Name="ActionButton" Content="Start" Click="{x:Bind ActionButton_Click}"/>
+            <Button x:Name="DisconnectButton" Content="Disconnect" Click="{x:Bind DisconnectButton_Click}"/>
         </StackPanel>
-        <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
-                      BorderBrush="AntiqueWhite" BorderThickness="1">
-            <ListView x:Name="ResultsListView"
-                      ItemTemplate="{StaticResource ResultsListViewTemplate}"
-                      ItemsSource="{x:Bind KnownDevices, Mode=OneWay}" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="738"/>
+        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto" Margin="0,10,0,0">
+            <StackPanel>
+                <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
+            </StackPanel>
         </ScrollViewer>
-    </Grid>
+        <StackPanel Visibility="Collapsed">
+            <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
+                      BorderBrush="AntiqueWhite" BorderThickness="1">
+                <ListView x:Name="ResultsListView"
+                      ItemTemplate="{StaticResource ResultsListViewTemplate}"
+                      ItemsSource="{x:Bind KnownDevices, Mode=OneWay}"/>
+            </ScrollViewer>
+        </StackPanel>
+    </StackPanel>
 </Page>
