--- a/ImGate/PC_APP/Scenario1_Discovery.xaml
+++ b/ImGate/PC_APP/Scenario1_Discovery.xaml
@@ -25,26 +25,24 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    <StackPanel>
-        <StackPanel x:Name="header" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="12,10,12,12">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel x:Name="header" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,10">
             <Button x:Name="ActionButton" Content="Start" Click="{x:Bind ActionButton_Click}"/>
             <StackPanel Visibility="Collapsed">
                 <Button x:Name="ConnectButton" Content="Connect" Click="{x:Bind ConnectButton_Click}"/>
                 <Button x:Name="DisconnectButton" Content="Disconnect" Click="{x:Bind DisconnectButton_Click}"/>
-            </StackPanel>
-        </StackPanel>
-        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto" Margin="0,10,0,0">
-            <StackPanel>
                 <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
             </StackPanel>
-        </ScrollViewer>
-        <StackPanel Visibility="Visible">
-            <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
+        </StackPanel>
+        <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
                       BorderBrush="AntiqueWhite" BorderThickness="1">
-                <ListView x:Name="ResultsListView"
+            <ListView x:Name="ResultsListView"
                       ItemTemplate="{StaticResource ResultsListViewTemplate}"
                       ItemsSource="{x:Bind KnownDevices, Mode=OneWay}"/>
-            </ScrollViewer>
-        </StackPanel>
-    </StackPanel>
+        </ScrollViewer>
+    </Grid>
 </Page>
