--- a/ImGate/PC_APP/Scenario1_Discovery.xaml
+++ b/ImGate/PC_APP/Scenario1_Discovery.xaml
@@ -25,19 +25,23 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="12,10,12,12">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="12,10,12,12" VerticalAlignment="Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel x:Name="header" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,10">
-            <Button x:Name="ActionButton" Content="Start" Click="{x:Bind ActionButton_Click}"/>
-            <StackPanel Visibility="Visible">
-                <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
-            </StackPanel>
+            <Button x:Name="ActionButton" Content="Start" Click="{x:Bind ActionButton_Click}" Margin="0,10,0,0"/>
+            <TextBlock x:Name="CharacteristicLatestValue" Margin="0,10,0,0"/>
         </StackPanel>
         <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
-                      BorderBrush="AntiqueWhite" BorderThickness="1" Visibility="Collapsed">
+                          Visibility="Visible">
+            <StackPanel>
+                <TextBlock x:Name="Log"/>
+            </StackPanel>
+        </ScrollViewer>
+        <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,0"
+                      Visibility="Collapsed">
             <ListView x:Name="ResultsListView"
                       ItemTemplate="{StaticResource ResultsListViewTemplate}"
                       ItemsSource="{x:Bind KnownDevices, Mode=OneWay}"/>
